# test-sparv-plugin

./: pyproject.toml
sbx_examples/: __init__.py  sentence.py  text.py  token.py
sbx_uppercase/: __init__.py  uppercase.py
